infrastructure/traefik/middleware-basic-auth.yml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: basicauth
  namespace: traefik
spec:
  basicAuth:
    secret: basic-auth-secret
