infrastructure/traefik/middleware-cors.yml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: cors-middleware
spec:
  headers:
    accessControlAllowMethods:
      - GET
      - PUT
      - POST
      - HEAD
      - OPTIONS
    accessControlAllowHeaders:
      - "*"
    accessControlAllowOriginList:
      - https://home.starsystem.dev
    accessControlMaxAge: 100
    accessControlAllowCredentials: true
