infrastructure/traefik/daemonset.yml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: traefik
spec:
  template:
    spec:
      priorityClassName: system-cluster-critical
      serviceAccountName: traefik
      containers:
        - name: traefik
          image: traefik:v3.4
          ports:
            - name: http
              containerPort: 80
            - name: https
              containerPort: 443
            - name: internal
              containerPort: 8080
          securityContext:
            capabilities:
              drop:
                - ALL
              add:
                - NET_BIND_SERVICE
          livenessProbe:
            httpGet:
              path: /ping
              port: 8080
          readinessProbe:
            httpGet:
              path: /ping
              port: 8080
          args:
            - --providers.kubernetesingress # Becomes the cluster's Ingress controller
            - --providers.kubernetescrd # Enables the use of CRDs for configuration
            - --ping # Enables the ping endpoint for healthchecking Traefik
            - --global.sendanonymoususage=false
            - --api.dashboard=true # Enables the Traefik dashboard
            - --api.insecure=true # Will be exposed through its own Ingress
            - --log.level=DEBUG
            - --metrics.addinternals=true # Allows more metrics to be seen by Prometheus
            - --entrypoints.web.address=:80
            - --entrypoints.web.forwardedheaders.insecure=false
            - --entrypoints.web.forwardedheaders.trustedips=10.0.0.0/8,172.16.0.0/12,192.168.0.0/16,fc00::/7
            - --entrypoints.web.proxyprotocol.insecure=false
            - --entrypoints.web.proxyprotocol.trustedips=10.0.0.0/8,172.16.0.0/12,192.168.0.0/16,fc00::/7
            - --entrypoints.web.http.redirections.entrypoint.to=websecure # Redirects HTTP requests to HTTPS
            - --entrypoints.web.http.redirections.entrypoint.scheme=https
            - --entrypoints.websecure.address=:443
            - --entrypoints.websecure.http.middlewares=traefik-cors-middleware # Responds to CORS requests on all routes
            - --entrypoints.websecure.http.tls=true
            - --entrypoints.websecure.forwardedheaders.insecure=false
            - --entrypoints.websecure.forwardedheaders.trustedips=10.0.0.0/8,172.16.0.0/12,192.168.0.0/16,fc00::/7
            - --entrypoints.websecure.proxyprotocol.insecure=false
            - --entrypoints.websecure.proxyprotocol.trustedips=10.0.0.0/8,172.16.0.0/12,192.168.0.0/16,fc00::/7
            - --metrics.prometheus.addEntryPointsLabels
            - --metrics.prometheus.addRoutersLabels
            - --metrics.prometheus.addServicesLabels
