infrastructure/traefik/service-dashboard.yml
apiVersion: v1
kind: Service
metadata:
  name: traefik-dashboard
  annotations:
    prometheus.starsystem.dev/scrape: "true"
    prometheus.starsystem.dev/scheme: http
    prometheus.starsystem.dev/path: /metrics
    prometheus.starsystem.dev/port: "8008"
spec:
  type: ClusterIP
  ports:
    - name: dashboard
      port: 8080
      targetPort: 8080
