infrastructure/traefik/service-proxy.yml
apiVersion: v1
kind: Service
metadata:
  name: traefik-proxy
  annotations:
    metallb.io/loadBalancerIPs: 10.1.16.1
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 80
    - port: 443
      targetPort: 443
