infrastructure/traefik/ingress-dashboard.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-dashboard
  namespace: traefik
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  tls:
    - hosts:
        - traefik.hydra.starsystem.dev
      secretName: traefik-dashboard-tls
  rules:
    - host: traefik.hydra.starsystem.dev
      http:
        paths:
          - path: /dashboard/
            pathType: Prefix
            backend:
              service:
                name: traefik-dashboard
                port:
                  number: 8080
